# alf

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
alf/: __init__.py  agent.py  compat.py  deep_aif.py  free_energy.py  generative_model.py  hierarchical.py  jax_core.py  jax_native.py  learning.py  metacognition.py  multitask.py  multitask_agent.py  policy.py  sequential_efe.py
alf/benchmarks/: __init__.py  cognitive_battery.py  context_dm.py  delayed_match.py  go_nogo.py  neuronav_wrappers.py  t_maze.py
alf/ddm/: __init__.py  bridge.py  fitting.py  wiener.py
alf/envs/: __init__.py  cognitive_tasks.py  neurogym_bridge.py
alf/hgf/: __init__.py  bridge.py  graph.py  learning.py  updates.py
alf/normative/: __init__.py  blr.py  bridge.py  combat.py  warping.py
alf/tests/: test_agent.py  test_benchmarks.py  test_cognitive_tasks.py  test_compat.py  test_ddm.py  test_ddm_fitting.py  test_ddm_oracle.py  test_decoder_aif.py  test_deep_aif.py  test_free_energy.py  test_generative_model.py  test_hgf.py  test_hgf_graph.py  test_hgf_oracle.py  test_integration.py  test_jax_native.py  test_learning.py  test_metacognition.py  test_metacognition_oracle.py  test_metacognitive_agent.py  test_multitask.py  test_neurogym_bridge.py  test_normative.py  test_normative_combat.py  test_policy.py  test_pymdp_bridges.py  (+1 more)
alf_aif.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autoresearch/: experiment.py
manuscript/: config.yaml
validation/: README.md  validate_all.py  validate_ddm.py  validate_hgf.py  validate_metacognition.py
(+1 files in other folders)
